--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TEST1</title>
-  <link rel="stylesheet" href="test-1.css/reset.css">
-  <link rel="stylesheet" href="test-1.css/styles.css">
+  <link rel="stylesheet" href="./test-1.css/reset.css">
+  <link rel="stylesheet" href="./test-1.css/styles.css">
 </head>
 <body>
   <div id="layout">
