--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <div class="main">
     <div>
-      <img src="test1-img/top.jpg" class="main-picture" alt="メイン画像、海と空">
+      <img src="./test1-img/top.jpg" class="main-picture" alt="メイン画像、海と空">
     </div><!--main-picture-->
   </div><!--main-->
   <!--後半-->
@@ -36,12 +36,12 @@
         <h2 class="logo">ABOUT</h2>
          <div class="picturex2-flex">
           <div class="about-img1">
-          <img class="about1" src="test1-img/about1.jpg" alt="海、空、後ろ姿の画像">
+          <img class="about1" src="./test1-img/about1.jpg" alt="海、空、後ろ姿の画像">
           <div class="text1">テストテストテストテストテストテストテストテストテストテストテストテストテスト
           </div><!--text1"-->
           </div><!--about-img1-->
           <div class="about-img2">
-          <img class="about2" src="test1-img/about2.jpg" alt="カラフルな看板">
+          <img class="about2" src="./test1-img/about2.jpg" alt="カラフルな看板">
            <div class="text2">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
            </div><!--text2-->
           </div><!--about-img2-->
@@ -82,10 +82,10 @@
         <!--side画像3枚-->
         <div class="picture-area">
             <div class="image1">
-              <img src="test1-img/side1.jpg">
+              <img src="./test1-img/side1.jpg">
             </div><!--image1-->
             <div class="image2">
-                <img src="test1-img/side2.jpg">
+                <img src="./test1-img/side2.jpg">
             </div><!--image2-->
             <div class="image3">
               <img src="test1-img/side3.jpg">
